bad/for_bool_over_int.example_compiler_output
ERROR
[1mbad/for_bool_over_int.lat:3:19: [1;31merror: [0;1mfor cannot iterate over value of non-array type `int`[m
	for (boolean x : 42) {}
	                 [1;32m^[m
